rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@uptime-results-UptimeMonitorChecksProcessor-uptime-results__1__failure.json.snap
---
source: src/processors/mod.rs
description: "{\n  \"guid\": \"54afc7ed9c53491481919c931f75bae1\",\n  \"subscription_id\": \"5421b5df80744113a6b57014f01a3a42\",\n  \"status\": \"failure\",\n  \"status_reason\": {\n    \"type\": \"dns_error\",\n    \"description\": \"Unable to resolve hostname example.xyz\"\n  },\n  \"trace_id\": \"947efba02dac463b9c1d886a44bafc94\",\n  \"span_id\": \"58e84098e63f42e1\",\n  \"scheduled_check_time_ms\": 1717614062978,\n  \"actual_check_time_ms\": 1717614068008,\n  \"duration_ms\": 100,\n  \"request_info\": {\n    \"request_type\": \"HEAD\",\n    \"http_status_code\": 500\n  }\n}\n"
expression: snapshot_payload
---
[
  {
    "check_status": "failure",
    "check_status_reason": "dns_error",
    "duration": 100,
    "environment": null,
    "http_status_code": 500,
    "offset": 1,
    "organization_id": 1,
    "partition": 0,
    "project_id": 1,
    "region_slug": "global",
    "retention_days": 30,
    "scheduled_check_time": 1717614062978.0,
    "timestamp": 1717614068008.0,
    "trace_id": "947efba0-2dac-463b-9c1d-886a44bafc94",
    "uptime_check_id": "54afc7ed-9c53-4914-8191-9c931f75bae1",
    "uptime_subscription_id": "5421b5df-8074-4113-a6b5-7014f01a3a42"
  }
]
